--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 pyzmq==25.1.0
+simpy==4.0.1
 six==1.16.0
 stack-data==0.6.2
 tornado==6.3.2
@@ -44,5 +45,3 @@ typing_extensions==4.6.2
 tzdata==2023.3
 wcwidth==0.2.6
 zipp==3.15.0
-
-simpy~=4.0.1
