--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ prompt-toolkit==3.0.38
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pygame==2.5.1
 Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -39,6 +40,7 @@ pyzmq==25.1.0
 simpy==4.0.1
 six==1.16.0
 stack-data==0.6.2
+tk==0.1.0
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.6.2
