--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.2.0
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
+cloudpickle==2.2.1
 comm==0.1.3
 contourpy==1.0.7
 cycler==0.11.0
@@ -18,6 +19,8 @@ google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.57.0
+gym==0.26.2
+gym-notices==0.0.8
 h5py==3.9.0
 idna==3.4
 importlib-metadata==6.6.0
